[workspace]
# include a member for each contract
members = [
  "sputnik-staking",
  "sputnik-nft-staking",
  "sputnikdao",
  "sputnikdao2",
  "sputnikdao-factory2",
  "nft-staking-factory",
  "test-token",
  "test-nft-token"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = true
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
